--- a/views/newPost.ejs
+++ b/views/newPost.ejs
@@ -25,16 +25,16 @@
   <div class="col-md-8 col-lg-6">
     <div class="card shadow">
       <div class="card-body p-4">
-        <form action="/posts/add" method="post" enctype="multipart/form-data" onsubmit="return validationForm()"   autocomplete="off">
+        <form action="/posts/add" method="post" enctype="multipart/form-data"  autocomplete="off">
           <div class="mb-3">
             <label for="title" class="form-label">
               <i class="fas fa-heading me-2"></i>Title
             </label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="title" 
-              name="title" 
+            <input
+              type="text"
+              class="form-control"
+              id="title"
+              name="title"
               placeholder="Enter post title" 
               
             />
