--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,7 +109,7 @@
         <a href="/posts/add" class="btn btn-outline-primary w-100 py-3"><i class="fas fa-edit me-2"></i>Create New Post</a>
       </div>
       <div class="col-md-6">
-        <a href="#" class="btn btn-outline-success w-100 py-3"><i class="fas fa-list me-2"></i>My Posts</a>
+        <a href="/posts" class="btn btn-outline-success w-100 py-3"><i class="fas fa-list me-2"></i>My Posts</a>
       </div>
     </div>
   </div>
