--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header.ejs") %>
+<%-include("partials/header.ejs",{title:"Login", user: user}) %>
 <h1 class="text-center mb-4">
   <i class="fas fa-sign-in-alt text-primary me-2"></i>Login
 </h1>
