--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-house me-1"></i>Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/posts/add"><i class="fas fa-list me-1"></i>Posts</a></li>
+            <li class="nav-item"><a class="nav-link" href="/posts"><i class="fas fa-list me-1"></i>Posts</a></li>
           </ul>
           <ul class="navbar-nav">
             <% if(user){%>
