implemented the read more to view the single post by ID

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,6 +49,9 @@
           </button>
         </form>
       </div>
+      <div class="text-center">
+          <p class="mb-3 text-muted">Not Registered? <a href="/register" class="text-primary fw-semibold">Register here</a></p>
+        </div>
     </div>
   </div>
 </div>
