--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,29 +7,63 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/style.css">
     <title><%= title %></title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/"><i class="fas fa-home me-2"></i>CTK App</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <a class="navbar-brand" href="/">
+          <i class="fas fa-blog text-primary me-2"></i>
+          <span class="fw-bold">
+            <% if(user) { %>
+              <%= user.username %>'s Blog
+            <% } else { %>
+              Global Tech Blog
+            <% } %>
+          </span>
+        </a>
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-house me-1"></i>Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/posts"><i class="fas fa-list me-1"></i>Posts</a></li>
-          </ul>
-          <ul class="navbar-nav">
-            <% if(user){%>
-              <li class="nav-item"><a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt me-1"></i>Logout</a></li>
-            <% } else{ %>
-              <li class="nav-item"><a class="nav-link" href="/register"><i class="fas fa-user-plus me-1"></i>Register</a></li>
-              <li class="nav-item"><a class="nav-link" href="/login"><i class="fas fa-sign-in-alt me-1"></i>Login</a></li>
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link px-3" href="/"><i class="fas fa-home me-1"></i>Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="/posts"><i class="fas fa-compass me-1"></i>Explore</a>
+            </li>
+            <% if(user){ %>
+              <li class="nav-item">
+                <a class="nav-link px-3" href="/posts/add"><i class="fas fa-plus-circle me-1"></i>Create</a>
+              </li>
             <% } %>
           </ul>
+          
+          <div class="d-flex align-items-center gap-2">
+            <% if(user){%>
+              <div class="dropdown">
+                <a class="btn btn-light dropdown-toggle d-flex align-items-center gap-2" href="#" role="button" data-bs-toggle="dropdown">
+                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 32px; height: 32px;">
+                    <i class="fas fa-user small"></i>
+                  </div>
+                  <span class="fw-medium text-dark"><%= user.username %></span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end border-0 shadow-lg p-2">
+                  <li><a class="dropdown-item rounded" href="/posts"><i class="fas fa-list me-2"></i>My Posts</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item rounded text-danger" href="/logout"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
+                </ul>
+              </div>
+            <% } else{ %>
+              <a href="/login" class="btn btn-link text-decoration-none text-dark fw-medium">Login</a>
+              <a href="/register" class="btn btn-primary rounded-pill px-4">Register</a>
+            <% } %>
+          </div>
         </div>
       </div>
     </nav>
-    <div class="container mt-4">
+    <div style="height: 80px;"></div> <!-- Spacer for fixed navbar -->
+    <div class="container mt-4 flex-grow-1">
