--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,13 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/style.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/blog-logo.png">
     <title><%= title %></title>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">
-          <i class="fas fa-blog text-primary me-2"></i>
+          <img src="/blog-logo.png" alt="Logo" width="40" height="40" class="me-2 rounded shadow-sm">
           <span class="fw-bold">
             <% if(user) { %>
               <%= user.username %>'s Blog
